--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script|Josefin+Sans&display=swap");
+* {
+  margin: 0;
+  padding: 0; }
+
 body {
   padding-top: 70px;
   background-color: rgba(217, 217, 217, 0.5);
@@ -81,11 +85,8 @@ a {
   transition: .5s ease; }
 
 .details-wrapper {
-  margin: 16px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 24px;
+  margin: 1rem;
+  padding: 2.5rem;
   border-radius: 8px;
   background-color: rgba(251, 90, 117, 0.85);
   color: white; }
@@ -95,8 +96,15 @@ a {
   border: 1px solid white;
   box-shadow: 3px 0px 9px 0px rgba(0, 0, 0, 0.3); }
 
-.details-wrapper div {
-  margin: 8px; }
+.details-flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap; }
+
+.details-image img {
+  max-width: 100%;
+  max-height: 100%; }
 
 .details-text a {
   color: white; }
@@ -112,6 +120,7 @@ li {
   font-family: 'Josefin Sans', sans-serif; }
 
 .comment-wrapper {
+  border: .5rem solid purple;
   display: flex;
   flex-direction: column;
   align-items: center; }
@@ -121,7 +130,7 @@ li {
   border-radius: 8px;
   background-color: #f3f3f3;
   background-color: rgba(50, 50, 50, 0.3);
-  width: 50vw;
+  width: 80vw;
   padding: 1rem;
   display: flex;
   flex-direction: column; }
@@ -338,10 +347,6 @@ li {
   transform: scale(1.05);
   color: black;
   transition: .5s ease; }
-
-.details-image img {
-  width: 400px;
-  height: 266px; }
 
 .form-button {
   color: red;
