--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,6 +10,11 @@
 // font-family: 'Amatic SC', cursive;
 // font-family: 'Josefin Sans', sans-serif;
 
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	padding-top: 70px;
 	background-color: rgba(217, 217, 217, .5);
@@ -120,11 +125,9 @@ a {
 }
 
 .details-wrapper {
-	margin: 16px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	padding: 24px;
+	margin: 1rem;
+	// border: .1rem solid purple;
+	padding: 2.5rem;
 	border-radius: 8px;
 	background-color: rgba($color: rgb(251, 90, 117), $alpha: .85);
 	// background-color: rgba($color: rgb(99, 195, 219), $alpha: .9);
@@ -137,8 +140,21 @@ a {
 	box-shadow: 3px 0px 9px 0px rgba($color: #000000, $alpha: .3);
 }
 
-.details-wrapper div {
-	margin: 8px;
+// .details-wrapper div {
+// 	margin: 8px;
+// }
+
+.details-flex {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+	// border: .1rem solid blue;
+}
+
+.details-image img {
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .details-text a {
@@ -158,7 +174,7 @@ li {
 }
 
 .comment-wrapper {
-	// border: .5rem solid purple;
+	border: .5rem solid purple;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -169,7 +185,7 @@ li {
 	border-radius: 8px;
 	background-color: #f3f3f3;
 	background-color: rgba($color: rgb(50, 50, 50), $alpha: .3);
-	width: 50vw;
+	width: 80vw;
 	padding: 1rem;
 	display: flex;
 	flex-direction: column;
@@ -428,11 +444,6 @@ li {
 	transform: scale(1.05);
 	color: black;
 	transition: .5s ease;
-}
-
-.details-image img {
-	width: 400px;
-	height: 266px;
 }
 
 .form-button {
