--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -174,7 +174,7 @@ li {
 }
 
 .comment-wrapper {
-	border: .5rem solid purple;
+	// border: .5rem solid purple;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
